[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/title_screen/animated_flames.tres" type="Texture" id=1]
[ext_resource path="res://assets/fonts/digi_castle/DigiCastle.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/title_screen/background.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/game_over/game over.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/title_screen.gd" type="Script" id=5]
[ext_resource path="res://assets/title_screen/title.png" type="Texture" id=6]
[ext_resource path="res://assets/theme.tres" type="Theme" id=7]
[ext_resource path="res://scripts/menu.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 1
outline_color = Color( 0.368627, 0.305882, 0.290196, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "Text Scroll"
length = 64.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 62 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 192 ), Vector2( 10, -760 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 62, 64 ),
"transitions": PoolRealArray( 1, 0, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -47.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.768627, 0.67451, 0.639216, 1 )
custom_constants/line_spacing = 0
text = "copyright 2021
ver.debug"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flame" type="TextureRect" parent="Background"]
anchor_left = 0.725
anchor_top = 0.417
anchor_right = 0.725
anchor_bottom = 0.417
margin_left = -16.0
margin_top = -32.064
margin_right = 24.0
margin_bottom = 7.936
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="Background"]
margin_left = 4.0
margin_top = 7.0
margin_right = 205.0
margin_bottom = 85.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
custom_constants/margin_right = 180
custom_constants/margin_top = 10
custom_constants/margin_left = 19
custom_constants/margin_bottom = 3
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="Menu"]
margin_left = 19.0
margin_top = 87.0
margin_right = 140.0
margin_bottom = 188.0
size_flags_vertical = 8
theme = SubResource( 2 )
custom_constants/separation = -1

[node name="LoadGame" type="Button" parent="Menu/Main"]
margin_right = 121.0
margin_bottom = 21.0
text = "Load Game"
flat = true
align = 0

[node name="NewGame" type="Button" parent="Menu/Main"]
margin_top = 20.0
margin_right = 121.0
margin_bottom = 41.0
text = "New Game"
flat = true
align = 0

[node name="Options" type="Button" parent="Menu/Main"]
margin_top = 40.0
margin_right = 121.0
margin_bottom = 61.0
text = "Options"
flat = true
align = 0

[node name="About" type="Button" parent="Menu/Main"]
margin_top = 60.0
margin_right = 121.0
margin_bottom = 81.0
text = "About"
flat = true
align = 0

[node name="Quit" type="Button" parent="Menu/Main"]
margin_top = 80.0
margin_right = 121.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="VBoxContainer" parent="Menu"]
visible = false
margin_left = 19.0
margin_top = 188.0
margin_right = 140.0
margin_bottom = 188.0
size_flags_vertical = 8
theme = SubResource( 2 )
custom_constants/separation = -1

[node name="Options" type="VBoxContainer" parent="Menu"]
visible = false
margin_left = 19.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 188.0
custom_constants/separation = 0

[node name="Sounds" type="Label" parent="Menu/Options"]
margin_right = 121.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.768627, 0.67451, 0.639216, 1 )
text = "Sounds"

[node name="SoundsSlider" type="HSlider" parent="Menu/Options"]
margin_top = 21.0
margin_right = 121.0
margin_bottom = 37.0
max_value = 20.0

[node name="Music" type="Label" parent="Menu/Options"]
margin_top = 37.0
margin_right = 121.0
margin_bottom = 58.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.768627, 0.67451, 0.639216, 1 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Menu/Options"]
margin_top = 58.0
margin_right = 121.0
margin_bottom = 74.0
max_value = 20.0

[node name="VSync" type="Button" parent="Menu/Options"]
margin_top = 74.0
margin_right = 121.0
margin_bottom = 95.0
toggle_mode = true
text = "Vsync"
align = 0

[node name="Controls" type="Button" parent="Menu/Options"]
margin_top = 95.0
margin_right = 121.0
margin_bottom = 116.0
text = "Controls"
align = 0

[node name="Fullscreen" type="Button" parent="Menu/Options"]
margin_top = 116.0
margin_right = 121.0
margin_bottom = 137.0
toggle_mode = true
text = "Fullscreen"
align = 0

[node name="Back" type="Button" parent="Menu/Options"]
margin_top = 157.0
margin_right = 121.0
margin_bottom = 178.0
size_flags_vertical = 10
text = "< Back"
align = 0

[node name="About" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="About"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -952.0
margin_right = 150.0
margin_bottom = -200.0
bbcode_enabled = true
bbcode_text = "[center][u]Moowool[/u]
Game Design

[u]DanDude[/u]
Graphics

[u]Janjan[/u]
Music

[u]Special thanks to[/u]
Zenith Wolfe
Malone Mast
The Godot Engine Community

...and you!

Powered by Godot Engine
[img=100]res://assets/sprites/logo.svg[/img][/center]



[center][img]res://assets/sprites/gplv3.png[/img][/center]
Hallowed Horns; dungeon crawling game
Copyright (C) 2021 Tohan Marchand

This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.

This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with this program.  If not, see [url]https://www.gnu.org/licenses/[/url]."
text = "Moowool
Game Design

DanDude
Graphics

Janjan
Music

Special thanks to
Zenith Wolfe
Malone Mast
The Godot Engine Community

...and you!

Powered by Godot Engine





Hallowed Horns; dungeon crawling game
Copyright (C) 2021 Tohan Marchand

This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.

This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with this program.  If not, see https://www.gnu.org/licenses/."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Fix the about page."
}

[node name="AboutAnimation" type="AnimationPlayer" parent="About"]
"anims/Text Scroll" = SubResource( 4 )

[connection signal="pressed" from="Menu/Main/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="Menu/Main/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/Main/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/Main/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="Menu/Main/Quit" to="." method="_on_Quit_pressed"]
[connection signal="toggled" from="Menu/Options/VSync" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Menu/Options/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="Menu/Options/Back" to="." method="_on_Back_pressed"]
[connection signal="meta_clicked" from="About/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="animation_finished" from="About/AboutAnimation" to="." method="_on_AboutAnimation_animation_finished"]
